--- a/app/src/main/res/layout/row_item.xml
+++ b/app/src/main/res/layout/row_item.xml
@@ -6,6 +6,7 @@
 
 
     <ImageView
+        android:src="@drawable/home_ad2"
         android:scaleType="centerCrop"
         android:id="@+id/imagePager"
         android:layout_width="match_parent"
@@ -14,6 +15,51 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+
+    <LinearLayout
+
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <View
+            android:id="@+id/reverse"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:focusable="true" />
+
+        <View
+            android:id="@+id/skip"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:focusable="true" />
+    </LinearLayout>
+
+    <com.example.my_stories.pview.SegmentedProgressBar
+        android:id="@+id/segmented_progressbar"
+        android:layout_width="match_parent"
+        android:layout_height="8dp"
+        android:layout_marginVertical="@dimen/_4sdp"
+        android:paddingVertical="@dimen/_4sdp"
+        app:container_color="@color/colorPrimary"
+        app:corner_radius="0dp"
+        app:fill_color="@color/colorPrimaryDark"
+        app:gap_size="@dimen/progressbar_gap"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:segment_count="1" />
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
