--- a/app/src/main/res/layout/row_pager_item.xml
+++ b/app/src/main/res/layout/row_pager_item.xml
@@ -1,38 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:layout_height="match_parent">
 
 
     <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/introViewPager"
+
+        android:id="@+id/imagePager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-
-    <com.google.android.material.tabs.TabLayout
-        android:visibility="gone"
-
-        android:id="@+id/into_tab_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:background="@color/white"
+        android:layout_height="0dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:tabBackground="@drawable/tab_pager_selector"
-        app:tabGravity="center"
-        app:tabIndicatorHeight="0dp"
-        app:tabPaddingEnd="@dimen/_10sdp"
-        app:tabPaddingStart="@dimen/_10sdp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <LinearLayout
-        android:visibility="gone"
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
@@ -75,7 +61,3 @@
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-
